# django_boilerplate

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.envs.example/development/: .django
.envs.example/production/: .django  .postgres
.envs.example/testing/: .django  .postgres
.github/workflows/: ci.yml
src/apps/users/: admin.py  models.py  views.py
src/apps/users/tests/: test_models.py
src/config/: api_router.py  asgi.py  urls.py  wsgi.py
src/config/settings/: base.py  development.py  production.py  testing.py
